[gd_scene load_steps=21 format=3 uid="uid://bva5hkrph3xwm"]

[ext_resource type="Script" path="res://Scenes/Ennemies/AttackingStanceEnnemy/attacking_stance_ennemy.gd" id="1_jtejy"]
[ext_resource type="Script" path="res://Scenes/Ennemies/AttackingStanceEnnemy/ennemy_weapon.gd" id="2_2bnpu"]
[ext_resource type="Script" path="res://Scenes/Ennemies/AttackingStanceEnnemy/weapon_animation.gd" id="2_ktt70"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_goiqt"]
resource_local_to_scene = true
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_f56x2"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_goiqt")
size = Vector3(0.1, 2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lmw5b"]
size = Vector3(2, 3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_onum7"]
size = Vector3(3, 2, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_r0b3k"]
size = Vector3(2, 3, 3)

[sub_resource type="CylinderMesh" id="CylinderMesh_s44ee"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fvrho"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l7vbp"]
size = Vector3(20, 20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_4g2jh"]
size = Vector3(6, 6, 6)

[sub_resource type="Animation" id="Animation_nk1jc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Sword/SwordMesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.785398, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon/HighHitbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon/LowHitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Weapon/MiddleHitbox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_agjsd"]
resource_name = "attack_high"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.38, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.785398, 0, 0), Vector3(0, 0, 0), Vector3(-2.35619, 0, 0), Vector3(-0.785398, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/HighHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.38),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_34a2d"]
resource_name = "attack_low"
length = 0.125
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.09, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-2.35619, 0, 0), Vector3(-3.14159, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-2.35619, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/LowHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06, 0.09),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_5q8mq"]
resource_name = "attack_middle"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.18, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(-1.5708, 0, -0.785398), Vector3(-1.5708, 0, 0.785398), Vector3(-1.5708, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/MiddleHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_i1gk6"]
resource_name = "idle_high"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Sword/SwordMesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.984314, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.785398, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gk7dv"]
resource_name = "idle_low"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Sword/SwordMesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.35619, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5dall"]
resource_name = "idle_middle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Sword/SwordMesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfrlq"]
_data = {
"RESET": SubResource("Animation_nk1jc"),
"attack_high": SubResource("Animation_agjsd"),
"attack_low": SubResource("Animation_34a2d"),
"attack_middle": SubResource("Animation_5q8mq"),
"idle_high": SubResource("Animation_i1gk6"),
"idle_low": SubResource("Animation_gk7dv"),
"idle_middle": SubResource("Animation_5dall")
}

[node name="AttackingStanceEnnemy" type="CharacterBody3D" groups=["ennemy"]]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_jtejy")

[node name="Weapon" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, 0)
collision_layer = 8
collision_mask = 6
monitoring = false
script = ExtResource("2_2bnpu")

[node name="Sword" type="Node3D" parent="Weapon"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="SwordMesh" type="MeshInstance3D" parent="Weapon/Sword"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_f56x2")
skeleton = NodePath("../..")

[node name="HighHitbox" type="CollisionShape3D" parent="Weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
shape = SubResource("BoxShape3D_lmw5b")
disabled = true

[node name="MiddleHitbox" type="CollisionShape3D" parent="Weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
shape = SubResource("BoxShape3D_onum7")

[node name="LowHitbox" type="CollisionShape3D" parent="Weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
shape = SubResource("BoxShape3D_r0b3k")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_s44ee")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_fvrho")

[node name="HealthLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
billboard = 2
double_sided = false
text = "10"
font_size = 64

[node name="DetectPlayerArea" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectPlayerArea"]
shape = SubResource("BoxShape3D_l7vbp")

[node name="AttackPlayerArea" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackPlayerArea"]
shape = SubResource("BoxShape3D_4g2jh")

[node name="WeaponAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sfrlq")
}
next/attack_high = &"idle_high"
next/attack_low = &"idle_low"
next/attack_middle = &"idle_middle"
script = ExtResource("2_ktt70")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Weapon" to="Weapon" method="_on_body_entered"]
[connection signal="body_entered" from="DetectPlayerArea" to="." method="_on_detect_player_area_body_entered"]
[connection signal="body_exited" from="DetectPlayerArea" to="." method="_on_detect_player_area_body_exited"]
[connection signal="body_entered" from="AttackPlayerArea" to="." method="_on_attack_player_area_body_entered"]
[connection signal="body_exited" from="AttackPlayerArea" to="." method="_on_attack_player_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
